--- a/Modules/LemmaCore/CMakeLists.txt
+++ b/Modules/LemmaCore/CMakeLists.txt
@@ -46,6 +46,7 @@ endif()
 # Python Bindings
 if (LEMMA_PYTHON3_BINDINGS)
 	add_subdirectory(python)
+	#pybind11_add_module(Lemma pyLemmaCore.cpp)
 endif()
 
 # Install
