Windows tweaks to setup.py for .pyd files

--- a/Modules/FDEM1D/testing/CMakeLists.txt
+++ b/Modules/FDEM1D/testing/CMakeLists.txt
@@ -9,10 +9,9 @@ target_link_libraries(unittest_FEM1D_SerializeCheck "lemmacore" "fdem1d" "yaml-c
 #CXXTEST_ADD_TEST(benchKiHa BenchKiHa.cc ${CMAKE_CURRENT_SOURCE_DIR}/BenchKiHa.h)
 #target_link_libraries(benchKiHa "lemmacore" "fdem1d" "yaml-cpp")
 
-set_target_properties(unittest_FEM1D_GetNameCheck
-	                  unittest_FEM1D_SerializeCheck 
-#                      benchKiHa
-    PROPERTIES 
-	CXX_STANDARD 14
-	CXX_STANDARD_REQUIRED ON
-)
+#set_target_properties(unittest_FEM1D_GetNameCheck
+#	              unittest_FEM1D_SerializeCheck 
+#    PROPERTIES 
+#	CXX_STANDARD 14
+#	CXX_STANDARD_REQUIRED ON
+#)
