Fixes for python wrapper with ABC inheritence. Also fixed EM1D to not clone antenna in tight loop

--- a/Modules/FDEM1D/testing/CMakeLists.txt
+++ b/Modules/FDEM1D/testing/CMakeLists.txt
@@ -6,8 +6,10 @@ target_link_libraries(unittest_FEM1D_GetNameCheck "lemmacore" "fdem1d" "yaml-cpp
 CXXTEST_ADD_TEST(unittest_FEM1D_SerializeCheck SerializeCheck.cc ${CMAKE_CURRENT_SOURCE_DIR}/SerializeCheck.h)
 target_link_libraries(unittest_FEM1D_SerializeCheck "lemmacore" "fdem1d" "yaml-cpp")
 
-#CXXTEST_ADD_TEST(benchKiHa BenchKiHa.cc ${CMAKE_CURRENT_SOURCE_DIR}/BenchKiHa.h)
-#target_link_libraries(benchKiHa "lemmacore" "fdem1d" "yaml-cpp")
+if(KIHA_EM1D)
+	CXXTEST_ADD_TEST(benchKiHa BenchKiHa.cc ${CMAKE_CURRENT_SOURCE_DIR}/BenchKiHa.h)
+	target_link_libraries(benchKiHa "lemmacore" "fdem1d" "yaml-cpp")
+endif()
 
 #set_target_properties(unittest_FEM1D_GetNameCheck
 #	              unittest_FEM1D_SerializeCheck 
