--- a/Modules/DCIP/CMakeLists.txt
+++ b/Modules/DCIP/CMakeLists.txt
@@ -1,11 +1,15 @@
-# Configure EMSchur3D 
+option ( LEMMA_MODULE_DCIP TRUE )
+
+if (LEMMA_MODULE_DCIP)
+
+# Configure DCIP 
 set(DCIP_VERSION_MAJOR "0")
 set(DCIP_VERSION_MINOR "0")
 set(DCIP_VERSION_PATCH "1")
 set(DCIP_VERSION "\"${DCIP_VERSION_MAJOR}.${DCIP_VERSION_MINOR}.${DCIP_VERSION_PATCH}\"")
 set(DCIP_VERSION_NOQUOTES "${DCIP_VERSION_MAJOR}.${DCIP_VERSION_MINOR}.${DCIP_VERSION_PATCH}")
 
-option ( LEMMA_MODULE_DCIP TRUE )
+
 
 configure_file (
 	"${CMAKE_CURRENT_SOURCE_DIR}/config/DCIPConfig.h.in"
@@ -48,3 +52,5 @@ install ( FILES  ${PROJECT_BINARY_DIR}/include/DCIPConfig.h   DESTINATION ${CMAK
 	#if (LEMMA_BUILD_EXAMPLES)
 	#	add_subdirectory(examples)
 	#endif()
+
+endif()
