--- a/Modules/FDEM1D/python/CMakeLists.txt
+++ b/Modules/FDEM1D/python/CMakeLists.txt
@@ -3,8 +3,10 @@
 add_library(pyFDEM1D MODULE pyFDEM1D.cpp)
 target_link_libraries(pyFDEM1D PRIVATE pybind11::module lemmacore fdem1d )
 set_target_properties(pyFDEM1D PROPERTIES PREFIX "${PYTHON_MODULE_PREFIX}"
-                                       SUFFIX "${PYTHON_MODULE_EXTENSION}"
-                                                      OUTPUT_NAME "FDEM1D"
+	SUFFIX "${PYTHON_MODULE_EXTENSION}"
+    OUTPUT_NAME "FDEM1D"
+	CXX_STANDARD 14 
+	CXX_STANDARD_REQUIRED ON
 )
 
 install(TARGETS pyFDEM1D
