Updates to external yaml-cpp for shared library build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -155,6 +155,11 @@ INCLUDE_DIRECTORIES(${YAML_CPP_INCLUDE_DIR})
 if (VTK_FOUND)
     set(volumeRenderer volumerenderer.cxx)
 	add_definitions(-DLEMMAUSEVTK) 
+	if (LEMMA_VTK8_SUPPORT)
+    add_definitions(-DLEMMA_VTK8_SUPPORT)
+    else (LEMMA_VTK9_SUPPORT) 
+    add_definitions(-DLEMMA_VTK9_SUPPORT)
+    endif()
 endif()
 
 if (LEMMA_BUILD_DOCUMENTATION)
